@@ -8,7 +8,7 @@ http://www.tuxpaint.org/
 
 $Id$
 
-2009.February.14 (0.9.21)
+2009.February.21 (0.9.21)
   * New Starters:
     -------------
     * Silver Frame
@@ -48,6 +48,11 @@ $Id$
       By Adam 'foo-script' Rakowski <foo-script@o2.pl> (GSOC 2008),
       with modifications by Bill Kendrick
       and Pere Pujal i Carabantes <pere@fornol.no-ip.org>
+
+    * String Edges - Draw string-like patters around the screen.
+      String Corner - Draw aligned string-like patterns.
+      String 'V' - Draw free-form string-like patterns.
+      By Pere Pujal i Carabantes <pere@fornol.no-ip.org>
 
   * Magic Tool Improvememnts:
     --------------------------
